sumo/tests/duarouter/trips/errors/vehicle_false_arrivalpos/errors.duarouter
Error: Invalid arrivalPos definition for vehicle ''
Quitting (on error).
